<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.mozilla.metrics</groupId>
  <artifactId>grouperfish</artifactId>
  <version>0.3-SNAPSHOT</version>

  <name>grouperfish</name>
  <description>Clustering engine for the web</description>
  <url>https://github.com/mozilla-metrics/grouperfish</url>

  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <skip.tests>false</skip.tests>
  </properties>
  
  <repositories>
    <repository>
      <id>cdh.release.repo</id>
      <url>https://repository.cloudera.com/content/repositories/releases</url>
      <name>Cloudera Releases Repository</name>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.4</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>5.6</version>
      <classifier>jdk15</classifier>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>1.5.8</version>
    </dependency>

    <!-- local repository / Mahout snapshot -->
    <dependency>
      <groupId>org.apache.mahout</groupId>
      <artifactId>mahout-core</artifactId>
      <version>0.6-SNAPSHOT</version>
      <scope>system</scope>
      <systemPath>${basedir}/lib/mahout-core-0.6-SNAPSHOT.jar</systemPath>
    </dependency>
    
    <dependency>
      <groupId>org.apache.mahout</groupId>
      <artifactId>mahout-math</artifactId>
      <version>0.6-SNAPSHOT</version>
      <scope>system</scope>
      <systemPath>${basedir}/lib/mahout-math-0.6-SNAPSHOT.jar</systemPath>
    </dependency>
    
    <dependency>
      <groupId>org.apache.mahout</groupId>
      <artifactId>mahout-utils</artifactId>
      <version>0.6-SNAPSHOT</version>
      <scope>system</scope>
      <systemPath>${basedir}/lib/mahout-utils-0.6-SNAPSHOT.jar</systemPath>
    </dependency>

    <!-- cloudera repository -->
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-core</artifactId>
      <version>0.20.2-cdh3u0</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase</artifactId>
      <version>0.90.1-cdh3u0</version>
    </dependency>

    <dependency>
    	<groupId>org.apache.lucene</groupId>
    	<artifactId>lucene-analyzers</artifactId>
    	<version>3.1.0</version>
    </dependency>
    
    <dependency>
      <groupId>com.mozilla.metrics</groupId>
      <artifactId>bagheera</artifactId>
      <version>0.2</version>
      <scope>system</scope>
      <systemPath>${basedir}/lib/bagheera-0.2.jar</systemPath>
    </dependency>
  </dependencies>

  <build>
    <finalName>grouperfish</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <skip>${skip.tests}</skip>
          <argLine>-Xms128m -Xmx256m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
          <parallel>false</parallel>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>tomcat-maven-plugin</artifactId>
        <version>1.1</version>
        <configuration>
          <server>services-tomcat</server>
          <path>/grouperfish</path>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>

      <!-- create a grouperfish jar that can be used for hadoop jobs, 
           cause it includes dependencies -->
      <!-- TODO: we'll need to use a different way to distribute 
           dependencies because we can't very well ship off a .war file 
           to hadoop... or can we? -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <id>job</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <skipAssembly>${mahout.skip.example}</skipAssembly>
              <descriptors>
                <descriptor>src/main/assembly/job.xml</descriptor>
              </descriptors>
              <archive>
                <manifest>
                  <mainClass>com.mozilla.grouperfish.cli.Cli</mainClass>
                </manifest>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>${settings.localRepository}</classpathPrefix>
              <classpathLayoutType>repository</classpathLayoutType>
              <mainClass>com.mozilla.grouperfish.cli.Cli</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
